--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "14cd277c95fd60";
+if(window.wcs) {
+  wcs_do();
+}
+</script>
   </body>
 </html>
